--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   ],
   
   "browser_action": {
-    "default_icon": "images/icon16.png",
+    "default_icon": "images/a_icon.png",
     "default_title": "Chrome Anitube tool",
     "default_popup": "html/popup.html"
   }
